Fixed z-index

--- a/main_section.css
+++ b/main_section.css
@@ -77,6 +77,7 @@ body {
     border-left-width: 1px;
     border-style: none none none solid;
     margin-top: 2vh;
+    z-index: 999;
 }
 
 .book-bottom-left {
